@@ -1,17 +1,7 @@
 {
-  "count": 6,
-  "uniques": 6,
+  "count": 5,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2026-01-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2026-01-17T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
     {
       "timestamp": "2026-01-18T00:00:00Z",
       "count": 1,
@@ -69,6 +59,16 @@
     },
     {
       "timestamp": "2026-01-29T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-30T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-31T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
